--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,10 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>5.7.5</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
