--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/tmdt5
+spring.datasource.url=jdbc:mysql://localhost:3306/booking-homestay
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+frontend.environment.path=http://localhost:3000/
+backend.environment.path=http://localhost:8080/
